# Dotm---Dotfiles-Manager

./: .gitignore  Cargo.toml  README.md  config.example
.opencode/agents/: rust-developer.md  rust-planner.md  rust-reviewer.md
.opencode/skills/rust/: SKILL.md
src/: backup.rs  cli.rs  config.rs  error.rs  linker.rs  main.rs  manager.rs
src/source/: github.rs  local.rs  mod.rs
